# tcp_plotter

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: cords.txt  cords_generator.rs  intergration_tests.rs
ui/: app-window.slint
