[package]
name = "Blinter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.7"
serde = "1.0.219"
slint = "1.8.0"
tokio = { version = "1.44.1", features = ["full"] }

[build-dependencies]
slint-build = "1.8.0"
